...
    ) {
        Box(modifier = Modifier
            .fillMaxSize()
            .clickable { onClick() }
        ){
            AsyncImage(model = photo,
                contentDescription = "food",
                contentScale = ContentScale.Crop,
                modifier = Modifier
                    .blur(3.dp)
                    .fillMaxSize(),
                colorFilter = ColorFilter.colorMatrix(colorMatrix),
            )
...
