...
        {
            FloatingActionButton(onClick = {
                navController.navigate(Screen.FavouriteFoodScreen.route) },
                containerColor = BlueBlue
            ) {
                Icon(imageVector = Icons.Default.List,
                    contentDescription = "List of favourite food",
                    modifier = Modifier
                        .padding(5.dp)
                        .size(45.dp)
                )
            }
        }
...
