...
                    if (!show) {
                        scope.launch {
                            val result = snackBarHostState.showSnackbar(
                                message = "Food deleted",
                                duration = SnackbarDuration.Short,
                                withDismissAction = true,
                                actionLabel = "Undo"
                            )

                            if(result == SnackbarResult.ActionPerformed){
                                viewModel.onEvent(event = FavouriteFoodEvent.RestoreMeal)
                            }
                        }
...
